styles.css
body {
  background-color: #f7f5fa;
}

.page-wrapper {
  background-color: #eaf1f6;
  max-width: 1200px;
  margin: 2rem auto;
  box-shadow: 0 0 90px rgba(0, 0, 0, 0.1);
  border-radius: 30px;
  overflow: hidden;
}

.nav-bar {
  background-color: #f7f5fa;
  padding: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.site-title {
  font-family: "Sora";
  font-weight: 700;
  color: #c8b6ff;
  margin-left: 50px;
}

.nav-list {
  list-style: none;
  display: flex;
  gap: 20px;
  margin-right: 50px;
}

.nav-link {
  color: #1e2430;
  font-family: "Inter", sans-serif;
  text-decoration: none;
}

nav a:hover {
  color: #fff;
  background-color: #c8b6ff;
  border: 5px solid #c8b6ff;
  padding: 5px;
  border-radius: 25px;
  box-shadow: 0 0 10px rgba(200, 182, 255, 0.5);
}

#hero {
  background-image: url("Welcome.jpg");
  background-size: cover;
  background-position: top;
  background-attachment: fixed;
  height: 80vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero-content {
  max-width: 600px;
  display: flex;
  flex-direction: column;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.hero-title {
  font-size: 48px;
  font-family: "Sora", sans-serif;
  font-weight: 700;
  color: #1e2430;
  margin-bottom: 20px;
}

.hero-description {
  font-size: 18px;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #55616f;
}

.hero-btn {
  margin-top: 30px;
  display: flex;
  gap: 20px;
  justify-content: center;
}

.hero-button.first {
  background-color: #c8b6ff;
  color: #fff;
  border: none;
  padding: 10px 20px;
  font-family: "Inter", sans-serif;
  font-weight: 300;
  border-radius: 5px;
  cursor: pointer;
  text-decoration: none;
}

.hero-button.second {
  background-color: #fff;
  color: #55616f;
  border: 1px solid #c8b6ff;
  padding: 10px 20px;
  font-family: "Inter", sans-serif;
  font-weight: 300;
  border-radius: 5px;
  cursor: pointer;
  text-decoration: none;
}

#about {
  padding: 40px;
  background-color: #eaf1f6;
  box-shadow: 0 0 90px rgba(0, 0, 0, 0.1);
}

.about-title {
  font-size: 36px;
  font-family: "Sora", sans-serif;
  font-weight: 700;
  color: #1e2430;
}

.about-description {
  font-size: 18px;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #55616f;
  margin-bottom: 60px;
}

.about-divider {
  display: flex;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  margin-bottom: 30px;
  gap: 10px;
  border-radius: 20px;
}

.about-card {
  flex: 1;
  padding: 20px;
  background-color: #f7f5fa;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.card-title {
  font-family: "Sora", sans-serif;
  font-weight: 700;
  color: #1e2430;
  margin-bottom: 10px;
}

.card-description {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #55616f;
}

hr {
  border-top: 1px solid #ebc7b2;
  margin: 30px;
}

#rooms {
  padding: 40px;
  background-color: #f7f5fa;
  box-shadow: 0 0 90px rgba(0, 0, 0, 0.1);
}

.rooms-description {
  font-size: 18px;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #55616f;
  margin-bottom: 60px;
  text-align: center;
}

.rooms-divider {
  display: flex;
  margin-bottom: 30px;
  gap: 10px;
  border-radius: 20px;
}

.room-card {
  flex: 1;
  padding: 20px;
  display: flex;
  flex-direction: column;
  border: 1px solid #ebc7b2;
  border-radius: 10px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.room-title {
  font-family: "Sora", sans-serif;
  font-weight: 500;
  color: #1e2430;
  margin-bottom: 10px;
  text-align: start;
}

.room-price {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 15px;
  color: #55616f;
  text-align: start;
}

.room-image {
  width: 100%;
  height: 200px;
  object-fit: cover;
  border-radius: 10px;
  margin-bottom: 15px;
}

#contact {
  padding: 40px;
  background: linear-gradient(180deg, #f7f5fa, #ede7f8);
  box-shadow: 0 0 90px rgba(0, 0, 0, 0.1);
}

.contact-title {
  font-size: 36px;
  font-family: "Sora", sans-serif;
  font-weight: 700;
  color: #2a3140;
  text-align: start;
}

.contact-subtitle {
  font-size: 18px;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #ebc7b2;
}

.contact-description {
  font-size: 18px;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #6b7684;
  margin-bottom: 50px;
}

.contact-divider {
  max-width: 400px;
  margin: 0 auto;
  padding: 20px;
  background-color: #fff;
  border: #eceaf3 solid 1px;
  border-radius: 10px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.form-title {
  font-family: "Sora", sans-serif;
  font-weight: 700;
  color: #2a3140;
  margin-bottom: 20px;
}

.form-description {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  color: #55616f;
  margin-bottom: 30px;
}

.form-data {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.form-data input,
.form-data textarea {
  padding: 10px;
  border: 1px solid #ebc7b2;
  border-radius: 5px;
  font-family: "Inter", sans-serif;
}

.submit-button {
  background-color: #c8b6ff;
  box-shadow: 0 0 10px rgba(200, 182, 255, 0.5);
  color: #fff;
  border: none;
  padding: 10px 20px;
  font-family: "Inter", sans-serif;
  font-weight: 600;
  border-radius: 12px;
  cursor: pointer;
  align-self: center;
  width: 100%;
  max-width: 190px;
}

.submit-button:hover {
  background-color: #b39ddb;
  box-shadow: 0 0 15px rgba(179, 157, 219, 0.7);
}

footer {
  background-color: #f2f0f7;
  padding: 20px;
  display: grid;
  grid-template-columns: auto auto;
  justify-content: center;
  column-gap: 60px;
  row-gap: 14px;
}

.footer-address {
  grid-column: 1 / -1;
  justify-self: center;
}

.footer-number,
.footer-email,
.footer-address {
  display: flex;
  align-items: center;
}

footer p {
  font-family: "Sora", sans-serif;
  font-weight: 400;
  color: #55616f;
  margin-left: 12px;
}

@media (max-width: 600px) {
  .about-divider,
  .rooms-divider {
    flex-direction: column;
  }

  .site-footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}

